<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btn_one"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/btn_two"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/btn_three"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/holo_purple"
        android:text="@string/btn_four"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/btn_five"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />
</androidx.constraintlayout.widget.ConstraintLayout>